--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 
-<div class="cabecera brown lighten-3 ">
+<div [style.background]="theme.color.baselg1" class="cabecera">
       <i class="material-icons white-text right" style="font-size: 28px;padding-top:8px">dashboard</i> 
-      <h5 class="white-text darken-5 rblack">Tablero </h5>            
+      <h5 class="white-text rblack">Tablero </h5>            
 </div>
 
 <div class='grey lighten-4 rcontenedor'  >
