--- a/src/app/pages/workflow/tableroworkflow/tableroworkflow.component.html
+++ b/src/app/pages/workflow/tableroworkflow/tableroworkflow.component.html
@@ -1,8 +1,8 @@
 
- 
+
 <md-card class="white" >
-        <span class="card-title rlight black-text " [ngStyle]="{'font-size': '28px'}"><md-icon>notifications_none</md-icon> Workflow <a  (click)="open()" class=" waves-effect waves-orange right white lighten-5 black-text "> <i class="material-icons grey-text right">more_vert</i></a>
-          <a  href="#!" class=" waves-effect waves-orange right  white lighten-5 "> <i class="material-icons grey-text right">fullscreen</i></a>
+        <span class="card-title "><md-icon>notifications_none</md-icon> Workflow <dialog-wf1></dialog-wf1>
+          <a  href="#!" class=" right  white  "> <i class="material-icons grey-text right">fullscreen</i></a>
         </span>
           
           <div class="divider"></div>
@@ -10,19 +10,20 @@
               
            <div class="row" >
                <br>
-                <div class="col s6" *ngFor= "let workflowicon of tablerowf" style="padding-bottom: 25px">
-                         <a href="#!" >
-                          <md-card [style.background]="rcolor.colorbaselg2" class=" waves-effect waves-orange" >
+                <div class="col s6" *ngFor= "let workflowicon of workflow?.tablerowf" >
+                         <a href="#!" *ngIf="workflowicon.visible"  >
+                          <md-card   class=" waves-effect " [style.background]="theme.color.baselg2">
                               <md-card-content>
                                     <div class="center ">
-                                        <i class="material-icons amber-text  text-darken-2"style="font-size:58px">{{workflowicon.icono}}</i>    
+                                        <i [style.color]="theme.color.baselg1" class="material-icons grande ">{{workflowicon.icono}}</i>    
                                     </div>
                                     <md-divider></md-divider>
                                </md-card-content>
 
-                              <md-card-footer class="white lighten-4 grey-text  text-darken-1 waves-effect waves-orange" style="padding-top:18px;padding:8px;font-size:14px;height: 40px">
-                                
-                               <div class= "left" style="padding-top:8px">{{workflowicon.tipo}}</div>  <div class="right rblack"style="padding:0 8px 0  8px;font-size:18px;border-radius:50%;background:#ffecb3"> {{workflowicon.cantidad}} </div>  
+                              <md-card-footer  class="white grey-text  text-darken-1 waves-effect"  style="">
+                                <div [style.background]="theme.color.basedk1" class= "separador"></div>
+                                <div class= "separador white"></div>
+                               <div class= "left" >{{workflowicon.tipo}}</div>  <div class= "right white">.</div><div [style.background]="theme.color.baselg1" class="rglobo white-text"> {{workflowicon.cantidad}} </div>  
                                 
                               </md-card-footer >
                           </md-card>
